2011-03-31  Sam Steingold  <sds@gnu.org>

	fix bug#1731469: loop expansion: spurious LET twice
	* loop.lisp (destructure): warn on destructuring empty patterns
	(expand-loop): do not destructure empty patterns and bind useless
	variables; this makes macroexpansion smaller but does not affect
	compiled code

2011-03-29  Sam Steingold  <sds@gnu.org>

	fix bug#3258485: HANDLER-BIND: no CONSTANTLY as a handler
	* compiler.lisp (insert-combined-LAPs): we have HANDLER-BEGIN&PUSH
	but not HANDLER-BEGIN, so insert a (PUSH)+(POP) after
	HANDLER-BEGIN which is not followed by a (PUSH)

2011-03-29  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (insert-combined-LAPs): remove noop GOs

2011-03-29  Sam Steingold  <sds@gnu.org>

	fix bug#3147908: too much consing in IGNORE-ERRORS,
	partially reverting the 2005-01-21 patch
	* compiler.lisp (c-form-table): map HANDLER-BIND to c-HANDLER-BIND
	and SYS::%HANDLER-BIND to c-%HANDLER-BIND
	(c-handler-bind-handler-anode, c-handler-bind-anode):
	extract from c-HANDLER-BIND
	(c-HANDLER-BIND, c-%HANDLER-BIND): use them
	* init.lisp (%expand-handlers): remove unused code
	* modules/asdf/asdf.lisp (module-provide-asdf): work around the
	upcoming bug#3258485 which was fixed by the 2005-01-21 patch and
	is now being reintroduced

2011-03-29  Sam Steingold  <sds@gnu.org>

	* trace.lisp (subclosure-pos, trace1): use SYMBOL-SUFFIX instead
	of CONCAT-PNAMES to keep the named of the traced definition in the
	same package as the original name

2011-03-28  Sam Steingold  <sds@gnu.org>

	fix bug#3182685: socket-connect with timeout non-zero ->ETIMEDOUT
	* socket.d (connect_via_ip): do not reuse "ret" when checking for
	socket errors (fixes patch 2008-06-30)

2011-03-28  Sam Steingold  <sds@gnu.org>

	fix bug#3165405: LOOP mixing WITH & Hash Table FOR
	* loop.lisp (expand-loop): reverse the order of INITFORMS and
	ENDTEST-FORMS in preamble (tweak the 2006-07-20 patch)

2011-03-27  Sam Steingold  <sds@gnu.org>
